[package]
name = "bevy_pacman3d"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#bevy = { git = "https://github.com/bevyengine/bevy", rev = "2fa7b3b6d0d5e5e7e48ae1c68affa4edc65cbe6a" }
bevy = "0.8"
bevy_mod_outline = "0.2.2"